--- a/code.html
+++ b/code.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-100">
 
 <head>
-    <title>App Name: A Coding Project By Matthew Muir</title>
+    <title>FizzBuzz: A Coding Project By Matthew Muir</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -25,7 +25,7 @@
     <!--Nav Section-->
     <nav class="navbar navbar-expand-md navbar-dark fixed-top">
         <div class="container-fluid">
-            <a class="navbar-brand mt-1" style="font-family: 'Bebas Neue', cursive;"><img style="margin-right: 12px;" src="/img/whitefavicon.png" class="d-inline-block align-text-top" height="25">App Name</a>
+            <a class="navbar-brand mt-1" style="font-family: 'Bebas Neue', cursive;"><img style="margin-right: 12px;" src="/img/whitefavicon.png" class="d-inline-block align-text-top" height="25">FizzBuzz</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                 aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -42,7 +42,7 @@
                         <a class="nav-link active" aria-current="page" href="code.html">The Code</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" target="_blank" href="https://github.com/Matthew-Muir">Git Repo</a>
+                        <a class="nav-link" target="_blank" href="https://github.com/Matthew-Muir/FizzBuzz">Git Repo</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" target="_blank" href="https:\\matt-m.netlify.app">About</a>
@@ -54,16 +54,20 @@
     <!--Main Section-->
     <main class="flex-shrink-0">
         <div class="container py-5 px-5 mt-5">
-            <h2 class="border-1 border-bottom border-dark">The Code for APP NAME</h2>
+            <h2 class="border-1 border-bottom border-dark">The Code for FizzBuzz</h2>
             <div class="row row-cols-1 row-cols-lg-2">
                 <div class="col-lg-8">
                     <pre data-src="/js/site.js" class="line-numbers"></pre>
                 </div>
 
                 <div class="col-lg-4">
-                    <p>The Code is structured in one function</p>
-                    <h5>Hello World</h5>
-                    <p>Hello World is a function that displays an alert with a message of "Hello World"</p>
+                    <h5>FizzBuzz</h5>
+                    <p>The app grabs the values contained in the from fields.
+                        Using the start and end value. It generates a list of numbers.
+                        Then the first function determines how many rows to add to the template.
+                        Once the template is created. For each value in the list of numbers. The value
+                        located in the template is replaced with the appropriate value of either Fizz, Buzz, FizzBuzz, or else just the number itself.
+                    </p>
                 </div>
             </div>
         </div>
