--- a/app.html
+++ b/app.html
@@ -2,7 +2,7 @@
 <html lang="en" class="h-100">
 
 <head>
-    <title>App Name: A Coding Project By Matthew Muir</title>
+    <title>FizzBuzz: A Coding Project By Matthew Muir</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -24,7 +24,7 @@
 <!--Nav Section-->
 <nav class="navbar navbar-expand-md navbar-dark fixed-top">
     <div class="container-fluid">
-        <a class="navbar-brand mt-1" style="font-family: 'Bebas Neue', cursive;"><img style="margin-right: 12px;" src="/img/whitefavicon.png" class="d-inline-block align-text-top" height="25">App Name</a>
+        <a class="navbar-brand mt-1" style="font-family: 'Bebas Neue', cursive;"><img style="margin-right: 12px;" src="/img/whitefavicon.png" class="d-inline-block align-text-top" height="25">FizzBuzz</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
             aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -41,7 +41,7 @@
                     <a class="nav-link" href="code.html">The Code</a>
                 </li>
                 <li class="nav-item">
-                <a class="nav-link" target="_blank" href="https://github.com/Matthew-Muir">Git Repo</a>
+                <a class="nav-link" target="_blank" href="https://github.com/Matthew-Muir/FizzBuzz">Git Repo</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" target="_blank" href="https:\\matt-m.netlify.app">About</a>
@@ -52,7 +52,46 @@
 </nav>
 <!--Main Section-->
 <main class="flex-shrink-0">
-    <div class="container mt-4"></div>
+    <div class="container mt-4">
+
+        <div class="row">
+            <div class="col-4 border-end">
+                <h1>FizzBuzz</h1>
+                <h4>Enter a starting and ending value. Once you press start the app will output the range of values.
+                    If a value is divisible by 3 the it'll say <strong>Fizz</strong>. If the value is divisible by
+                    5 it'll say <strong>Buzz</strong>. Values that are divisible by 3 & 5 display <strong>FizzBuzz</strong>.
+                </h4>
+            </div>
+                <div class="col-8">
+                                
+                    <form class="row border-bottom pb-3">
+                        <div class="col">
+                            <input class="form-control" id="startNum" type="number" placeholder="Start Number" value="1" aria-label="Start Number">
+                        </div>
+                        <div class="col">
+                            <input class="form-control" id="endNum" type="number" placeholder="End Number" value="50">
+                        </div>
+                        <div class="col"">
+                            <button type="button" id="startButton" class="btn btn-md btn-info">Start</button>
+                        </div>
+                    </form>
+                    <div class="row">
+                        <div class="table-responsive">
+                            <table class="table table-striped table-light">
+                                <tbody id="results">
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-12">
+
+                </div>
+            </div>
+        </div>
+
+    </div>
 </main>
     <!--Footer Section-->
     <footer class="footer mt-auto py-3 sticky-footer bg-dark">
@@ -80,5 +119,7 @@
         integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous">
     </script>
     <script src="js/site.js"></script>
+    <script>document.getElementById("startButton").addEventListener("click", PopulateTable);</script>
+
 </body>
 </html>
